# backend/blog_app/storage/api-docs/api-docs.json
@@ -279,33 +279,30 @@
                         "bearerAuth": []
                     }
                 ]
-            },
+            }
+        },
+        "/comments": {
             "post": {
                 "tags": [
                     "Comments"
                 ],
-                "summary": "Add a comment to a post",
-                "operationId": "683ee0b5f1406ebbe716127f3b5aaf14",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
+                "summary": "Add a comment",
+                "operationId": "a0c0613c248bc727d51299e2eb03d2e3",
                 "requestBody": {
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
                                 "required": [
-                                    "content"
+                                    "post_id",
+                                    "comment"
                                 ],
                                 "properties": {
-                                    "content": {
+                                    "post_id": {
+                                        "type": "string",
+                                        "example": "uuid-1234"
+                                    },
+                                    "comment": {
                                         "type": "string",
                                         "example": "Great post!"
                                     }
@@ -490,6 +487,87 @@
             }
         },
         "/posts/{id}": {
+            "get": {
+                "tags": [
+                    "Posts"
+                ],
+                "summary": "Get a single post",
+                "operationId": "c8bd68bc05422c879bc2dd429ae5782b",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Post retrieved successfully"
+                    },
+                    "404": {
+                        "description": "Post not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "Posts"
+                ],
+                "summary": "Update an existing post",
+                "operationId": "06c81121178208730e11d2f6b655e78d",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "title": {
+                                        "type": "string",
+                                        "example": "Updated Title"
+                                    },
+                                    "content": {
+                                        "type": "string",
+                                        "example": "Updated Content"
+                                    },
+                                    "category_id": {
+                                        "type": "integer",
+                                        "example": 1
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Post updated successfully"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            },
             "delete": {
                 "tags": [
                     "Posts"
@@ -570,17 +648,17 @@
                 ]
             }
         },
-        "/user/update": {
-            "post": {
+        "/profile": {
+            "put": {
                 "tags": [
                     "User"
                 ],
                 "summary": "Update user profile",
-                "operationId": "8141ae62b00a269eb782fd85759bc3c6",
+                "operationId": "423b0a7d6bc9e3f8dd9fe56b2909cc27",
                 "requestBody": {
                     "required": true,
                     "content": {
-                        "multipart/form-data": {
+                        "application/json": {
                             "schema": {
                                 "properties": {
                                     "first_name": {
@@ -605,7 +683,49 @@
                                         "format": "date",
                                         "example": "1990-01-01"
                                     },
-                                    "profile_picture": {
+                                    "bio": {
+                                        "type": "string",
+                                        "example": "Flutter Developer"
+                                    },
+                                    "location": {
+                                        "type": "string",
+                                        "example": "Cambodia"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Profile updated successfully"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/profile/avatar": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Upload profile avatar",
+                "operationId": "1535ef7047ded616aae81a322abcb71f",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "avatar"
+                                ],
+                                "properties": {
+                                    "avatar": {
                                         "type": "string",
                                         "format": "binary"
                                     }
@@ -617,40 +737,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Profile updated successfully",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "success": {
-                                            "type": "boolean",
-                                            "example": true
-                                        },
-                                        "message": {
-                                            "type": "string",
-                                            "example": "Profile updated successfully"
-                                        },
-                                        "statusCode": {
-                                            "type": "integer",
-                                            "example": 200
-                                        },
-                                        "data": {
-                                            "type": "object"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
-                    },
-                    "422": {
-                        "description": "Validation Error"
-                    },
-                    "500": {
-                        "description": "Server Error"
+                        "description": "Avatar uploaded successfully"
                     }
                 },
                 "security": [
